k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: static-ingress
  namespace: static
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: static.awslearnings.com
    http:
      paths:
      - path:
        backend:
          serviceName: service
          servicePort: 80
